--- a/BeaconScanner/app/src/main/res/layout/login.xml
+++ b/BeaconScanner/app/src/main/res/layout/login.xml
@@ -37,45 +37,59 @@
         android:elevation="0dp"
         />
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/button_login"
-        style="@style/Widget.MaterialComponents.Button"
-        android:layout_width="0dp"
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/materialCardViewBoton"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="30dp"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginVertical="20dp"
-        android:fontFamily="@font/nunito"
-        android:text="@string/login"
-        app:backgroundTint="@color/colorAccent"
-        app:elevation="30dp"
+        android:backgroundTint="#ffffff"
+        android:padding="0dp"
+        app:cardCornerRadius="4dp"
+        app:cardPreventCornerOverlap="false"
+        app:cardUseCompatPadding="false"
+        app:contentPadding="0dp"
         app:layout_constraintBottom_toBottomOf="@+id/materialCardView"
         app:layout_constraintEnd_toEndOf="@+id/materialCardView"
         app:layout_constraintStart_toStartOf="@+id/materialCardView"
-        app:layout_constraintTop_toBottomOf="@+id/materialCardView" />
+        app:layout_constraintTop_toBottomOf="@+id/materialCardView"
+        app:cardElevation="5dp">
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/button_login"
+            style="@style/Widget.MaterialComponents.Button"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_margin="0dp"
+            android:fontFamily="@font/nunito_semibold"
+            android:insetTop="0dp"
+            android:insetBottom="0dp"
+            android:text="@string/login"
+            app:backgroundTint="@color/colorAccent"
+            />
+
+    </com.google.android.material.card.MaterialCardView>
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/materialCardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="30dp"
+        android:backgroundTint="#ffffff"
+        android:clipToPadding="false"
         android:minHeight="200dp"
         android:padding="60dp"
-        android:backgroundTint="#ffffff"
+        app:cardMaxElevation="40dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:clipToPadding="false"
-        android:elevation="30dp"
-        >
+        app:cardElevation="4dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginBottom="40dp"
             android:layout_marginTop="20dp"
+            android:layout_marginBottom="30dp"
             android:gravity="center"
             android:orientation="vertical">
 
@@ -101,7 +115,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/nunito"
+                    android:inputType="textEmailAddress"
                     android:maxLines="1"
+                    android:singleLine="true"
                     app:layout_constraintTop_toBottomOf="@+id/textInputEditText" />
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -111,8 +127,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                android:hint="@string/hint_text_pass"
-                >
+                android:hint="@string/hint_text_pass">
 
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -148,7 +163,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/materialCardView"
         app:layout_constraintStart_toStartOf="@+id/materialCardView"
-        app:layout_constraintTop_toBottomOf="@+id/button_login" />
+        app:layout_constraintTop_toBottomOf="@+id/materialCardViewBoton" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
