--- a/BeaconScanner/app/src/main/res/layout/registro.xml
+++ b/BeaconScanner/app/src/main/res/layout/registro.xml
@@ -155,7 +155,7 @@
                     android:fontFamily="@font/nunito"
                     android:inputType="phone"
                     android:maxLines="1"
-                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
+                    app:layout_constraintTop_toBottomOf="@+id/texto_telefono_registrar" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -178,7 +178,7 @@
                     android:fontFamily="@font/nunito"
                     android:inputType="textPassword"
                     android:maxLines="1"
-                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
+                    app:layout_constraintTop_toBottomOf="@+id/texto_contrasenya_registrar_layout" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -201,10 +201,9 @@
                     android:fontFamily="@font/nunito"
                     android:inputType="textPassword"
                     android:maxLines="1"
-                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
+                    app:layout_constraintTop_toBottomOf="@+id/texto_contrasenyaotravez_registrar_layout" />
 
             </com.google.android.material.textfield.TextInputLayout>
-
 
         </LinearLayout>
 
@@ -216,6 +215,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/nunito"
         android:text="@string/logeate"
+        android:clickable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/materialCardView"
         app:layout_constraintStart_toStartOf="@+id/materialCardView"
