--- a/BeaconScanner/app/src/main/res/navigation/mobile_navigation.xml
+++ b/BeaconScanner/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,9 +7,9 @@
 
     <fragment
         android:id="@+id/nav_home"
-        android:name="com.example.beaconscanner.ui.home.HomeFragment"
+        android:name="com.example.beaconscanner.ui.mapa.MapaFragment"
         android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_mapa" />
 
     <fragment
         android:id="@+id/nav_foto"
@@ -18,27 +18,15 @@
         tools:layout="@layout/fragment_foto" />
 
     <fragment
-        android:id="@+id/nav_slideshow"
-        android:name="com.example.beaconscanner.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
-
-    <fragment
         android:id="@+id/nav_ajustes"
         android:name="com.example.beaconscanner.ui.ajustes.AjustesFragment"
         android:label="@string/menu_ajustes"
         tools:layout="@layout/fragment_ajustes" />
 
     <fragment
-        android:id="@+id/nav_share"
-        android:name="com.example.beaconscanner.ui.share.ShareFragment"
-        android:label="@string/menu_sesion"
-        tools:layout="@layout/fragment_share" />
-
-    <fragment
-        android:id="@+id/nav_send"
+        android:id="@+id/nav_sesion"
         android:name="com.example.beaconscanner.ui.sesion.SesionFragment"
-        android:label="@string/menu_send"
+        android:label="@string/menu_sesion"
         tools:layout="@layout/fragment_sesion" />
 
 </navigation>
