Arreglado Navigation Drawer
Falta hacer funcional la app

--- a/BeaconScanner/app/src/main/res/layout/fragment_foto.xml
+++ b/BeaconScanner/app/src/main/res/layout/fragment_foto.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary">
-
+<!--
     <TextView
         android:id="@+id/text_foto"
         android:layout_width="match_parent"
@@ -18,4 +18,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+-->
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="228dp"
+        android:layout_height="23dp"
+        android:text="Aquí ira la cámara"
+        android:textColor="@color/cardview_light_background"
+        app:autoSizeTextType="uniform"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.474"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
