--- a/BeaconScanner/app/src/main/res/layout/fragment_ajustes.xml
+++ b/BeaconScanner/app/src/main/res/layout/fragment_ajustes.xml
@@ -20,17 +20,45 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 -->
+
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="228dp"
-        android:layout_height="23dp"
+        android:id="@+id/textView3"
+        android:layout_width="175dp"
+        android:layout_height="42dp"
         android:layout_marginStart="8dp"
-        android:text="Aquí iran los ajustes de la aplicación"
+        android:gravity="center|center_horizontal|center_vertical"
+        android:text="@string/menu_ajustes"
         android:textColor="@color/cardview_light_background"
         app:autoSizeTextType="uniform"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.474"
+        app:layout_constraintHorizontal_bias="0.483"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.022" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="122dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="8dp"
+        android:text="Modo claro"
+        android:textColor="@color/cardview_light_background"
+        app:autoSizeTextType="uniform"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.156"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.135" />
+
+    <Switch
+        android:id="@+id/switch1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="41dp"
+        android:textColor="@color/cardview_light_background"
+        app:layout_constraintStart_toEndOf="@+id/textView2"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
 </androidx.constraintlayout.widget.ConstraintLayout>
