mostrar datos usuario

--- a/BeaconScanner/app/src/main/res/layout/fragment_perfil.xml
+++ b/BeaconScanner/app/src/main/res/layout/fragment_perfil.xml
@@ -74,7 +74,7 @@
         app:layout_constraintTop_toBottomOf="@+id/materialCardView">
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/button_register"
+            android:id="@+id/button_guardar"
             style="@style/Widget.MaterialComponents.Button"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -82,7 +82,7 @@
             android:fontFamily="@font/nunito_semibold"
             android:insetTop="0dp"
             android:insetBottom="0dp"
-            android:text="@string/registrarse"
+            android:text="@string/guardar"
             app:backgroundTint="@color/colorAccent" />
 
     </com.google.android.material.card.MaterialCardView>
@@ -122,12 +122,15 @@
                 app:boxBackgroundColor="#00FFFFFF"
                 app:boxStrokeColor="@color/colorAccent"
                 app:layout_constraintTop_toTopOf="@+id/textInputLayout"
-                app:startIconDrawable="@drawable/ic_email_24px">
+                app:startIconDrawable="@drawable/ic_email_24px"
+                >
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/texto_email_registrar"
+                    android:id="@+id/textoemail"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:duplicateParentState="false"
+                    android:editable="false"
                     android:fontFamily="@font/nunito"
                     android:inputType="textEmailAddress"
                     android:maxLines="1"
@@ -149,9 +152,11 @@
 
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/texto_telefono_registrar"
+                    android:id="@+id/textotelefono"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:duplicateParentState="false"
+                    android:editable="false"
                     android:fontFamily="@font/nunito"
                     android:inputType="phone"
                     android:maxLines="1"
@@ -159,7 +164,7 @@
 
             </com.google.android.material.textfield.TextInputLayout>
 
-            <com.google.android.material.textfield.TextInputLayout
+     <!--       <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/texto_contrasenya_registrar_layout"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
@@ -172,7 +177,7 @@
 
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/texto_contrasenya_registrar"
+                    android:id="@+id/textopass"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/nunito"
@@ -195,7 +200,7 @@
 
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/texto_contrasenyaotravez_registrar"
+                    android:id="@+id/textopass2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/nunito"
@@ -203,23 +208,11 @@
                     android:maxLines="1"
                     app:layout_constraintTop_toBottomOf="@+id/texto_contrasenyaotravez_registrar_layout" />
 
-            </com.google.android.material.textfield.TextInputLayout>
+            </com.google.android.material.textfield.TextInputLayout> -->
 
         </LinearLayout>
 
     </com.google.android.material.card.MaterialCardView>
-
-    <TextView
-        android:id="@+id/registrateaqui"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/nunito"
-        android:text="@string/logeate"
-        android:clickable="true"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/materialCardView"
-        app:layout_constraintStart_toStartOf="@+id/materialCardView"
-        app:layout_constraintTop_toBottomOf="@+id/materialCardViewBoton" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
