--- a/BeaconScanner/app/src/main/res/layout/login.xml
+++ b/BeaconScanner/app/src/main/res/layout/login.xml
@@ -95,7 +95,7 @@
 
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/appname"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
