--- a/BeaconScanner/app/src/main/res/menu/activity_navigation_drawer_drawer.xml
+++ b/BeaconScanner/app/src/main/res/menu/activity_navigation_drawer_drawer.xml
@@ -21,8 +21,12 @@
         android:id="@+id/group1"
         android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_sesion"
+            android:id="@+id/nav_perfil"
             android:icon="@drawable/perfil"
+            android:title="@string/menu_perfil" />
+        <item
+            android:id="@+id/nav_sesion"
+            android:icon="@drawable/logout"
             android:title="@string/menu_sesion" />
     </group>
 
