--- a/BeaconScanner/app/src/main/res/navigation/mobile_navigation.xml
+++ b/BeaconScanner/app/src/main/res/navigation/mobile_navigation.xml
@@ -24,6 +24,12 @@
         tools:layout="@layout/fragment_ajustes" />
 
     <fragment
+        android:id="@+id/nav_perfil"
+        android:name="com.example.beaconscanner.ui.perfil.PerfilFragment"
+        android:label="@string/menu_perfil"
+        tools:layout="@layout/fragment_perfil" />
+
+    <fragment
         android:id="@+id/nav_sesion"
         android:name="com.example.beaconscanner.ui.sesion.SesionFragment"
         android:label="@string/menu_sesion"
