--- a/BeaconScanner/app/src/main/res/layout/app_bar_navigation_drawer.xml
+++ b/BeaconScanner/app/src/main/res/layout/app_bar_navigation_drawer.xml
@@ -33,18 +33,30 @@
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
+        style="@style/Widget.MaterialComponents.FloatingActionButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
+        android:background="@color/colorAccent"
+        android:foregroundTint="@android:color/white"
+        app:tint="@android:color/white"
+        app:backgroundTint="@color/colorAccent"
+        app:rippleColor="@android:color/white"
         app:srcCompat="@android:drawable/ic_dialog_email" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
+ <!--   <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab2"
+        style="@style/Widget.MaterialComponents.FloatingActionButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="top|end"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+        android:background="@color/colorAccent"
+        android:foregroundTint="@android:color/white"
+        app:tint="@android:color/white"
+        app:backgroundTint="@color/colorAccent"
+        app:rippleColor="@android:color/white"
+        app:srcCompat="@android:drawable/ic_dialog_email" /> -->
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
