--- a/BeaconScanner/app/src/main/res/values/styles.xml
+++ b/BeaconScanner/app/src/main/res/values/styles.xml
@@ -16,6 +16,12 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="FilterPopup" parent="AppTheme">
+        <item name="android:contextPopupMenuStyle">
+            @style/Widget.MaterialComponents.PopupMenu.ContextMenu
+        </item>
+    </style>
+
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
