--- a/BeaconScanner/app/src/main/res/layout/app_bar_navigation_drawer.xml
+++ b/BeaconScanner/app/src/main/res/layout/app_bar_navigation_drawer.xml
@@ -4,13 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="0dp"
     tools:context=".NavigationDrawerActivity">
 
     <include
         layout="@layout/content_navigation_drawer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:elevation="1dp"/>
+        android:elevation="1dp" />
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -45,7 +46,6 @@
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:sdOverlayLayout="@id/overlay"
-        />
+        app:sdOverlayLayout="@id/overlay" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
