--- a/BeaconScanner/app/src/main/res/layout/fragment_perfil.xml
+++ b/BeaconScanner/app/src/main/res/layout/fragment_perfil.xml
@@ -217,9 +217,9 @@
         style="@style/Widget.MaterialComponents.FloatingActionButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="top|end"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_gravity="bottom|end"
+        android:layout_marginEnd="23dp"
+        android:layout_marginBottom="23dp"
         android:background="@color/colorAccent"
         android:foregroundTint="@android:color/white"
         app:backgroundTint="@color/colorAccent"
