--- a/BeaconScanner/app/src/main/res/layout/fragment_perfil.xml
+++ b/BeaconScanner/app/src/main/res/layout/fragment_perfil.xml
@@ -222,6 +222,7 @@
         android:layout_marginBottom="23dp"
         android:background="@color/colorAccent"
         android:foregroundTint="@android:color/white"
+        android:visibility="gone"
         app:backgroundTint="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
