--- a/BeaconScanner/app/src/main/res/values/styles.xml
+++ b/BeaconScanner/app/src/main/res/values/styles.xml
@@ -25,4 +25,10 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+
+    <!-- The launcher theme. It sets the main window background to the launch_screen drawable -->
+    <style name="AppTheme.Launcher">
+        <item name="android:windowBackground">@drawable/launch_screen</item>
+    </style>
+
 </resources>
