--- a/BeaconScanner/app/src/main/res/layout/registro.xml
+++ b/BeaconScanner/app/src/main/res/layout/registro.xml
@@ -21,14 +21,13 @@
         app:layout_constraintStart_toStartOf="@+id/materialCardViewBg"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
+  <!--      <ImageView
             android:id="@+id/imageView2"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_gravity="center|center_horizontal|center_vertical"
-            android:elevation="20dp"
-            android:scaleType="fitXY"
-            app:srcCompat="@drawable/earth" />
+            android:elevation="2dp"
+            app:srcCompat="@drawable/earth" /> -->
 
         <TextView
             android:id="@+id/appname"
@@ -220,7 +219,7 @@
     </com.google.android.material.card.MaterialCardView>
 
     <TextView
-        android:id="@+id/registrateaqui"
+        android:id="@+id/loginaqui"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/nunito"
