--- a/BeaconScanner/app/src/main/res/values/styles.xml
+++ b/BeaconScanner/app/src/main/res/values/styles.xml
@@ -28,7 +28,7 @@
 
     <!-- The launcher theme. It sets the main window background to the launch_screen drawable -->
     <style name="AppTheme.Launcher">
-        <item name="android:windowBackground">@drawable/launch_screen</item>
+        <item name="android:windowBackground">@drawable/screenlaunch</item>
     </style>
 
 </resources>
