--- a/BeaconScanner/app/src/main/res/layout/fragment_inicio_conductor.xml
+++ b/BeaconScanner/app/src/main/res/layout/fragment_inicio_conductor.xml
@@ -46,7 +46,7 @@
             android:id="@+id/imageView5"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="right"
+            android:layout_gravity="end"
             android:layout_weight="3"
             android:padding="16dp"
             android:src="@drawable/happ" />
@@ -82,7 +82,7 @@
 
         android:id="@+id/materialCardView"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="match_constraint"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
@@ -98,37 +98,53 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5">
 
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center_horizontal|center_vertical"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/textView7"
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textView7"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:fontFamily="@font/nunito_semibold"
+                    android:padding="15dp"
+                    android:text="@string/estadonodo"
+                    android:textAlignment="textEnd"
+                    android:textColor="#000000"
+                    android:textSize="20sp" />
+
+                <TextView
+                    android:id="@+id/textView8"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_weight="1"
+                    android:fontFamily="@font/nunito_semibold"
+                    android:padding="15dp"
+                    android:text="@string/activo"
+                    android:textAlignment="textStart"
+                    android:textColor="#000000"
+                    android:textSize="20sp" />
+
+            </LinearLayout>
+
+            <com.db.williamchart.view.LineChartView
+                android:id="@+id/lineChart"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:fontFamily="@font/nunito_semibold"
-                android:padding="15dp"
-                android:text="@string/estadonodo"
-                android:textAlignment="textEnd"
-                android:textColor="#000000"
-                android:textSize="20sp" />
+                app:chart_axis="none"
+                app:chart_lineColor="@color/colorAccent"
+                app:chart_lineThickness="3dp"
+                app:chart_smoothLine="true" />
 
-            <TextView
-                android:id="@+id/textView8"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="center_horizontal"
-                android:layout_weight="1"
-                android:fontFamily="@font/nunito_semibold"
-                android:padding="15dp"
-                android:text="@string/activo"
-                android:textAlignment="textStart"
-                android:textColor="#000000"
-                android:textSize="20sp" />
         </LinearLayout>
 
     </com.google.android.material.card.MaterialCardView>
